css/captcha.css
.info-box-2col {
    font-family: 'Courier New', Courier, monospace;
    font-weight: bold;
    display: flex;
    flex-wrap: wrap;
    border: 2px solid #ff00ff;
    background-color: #00ff00;
    padding: 10px;
    margin: 10px auto;
    width: 100%;
    height: 500px;
    max-width: 900px;
    color: #000000;
}

.info-left {
    flex: 1 1 200px;
    max-width: 200px;
    margin-right: 20px;
    overflow: hidden;
    overflow-y: auto;
}

.info-right {
    flex: 2 1 500px;
    background: #ffffff;
    border: 2px solid #00a600;
    border-radius: 3px;
    padding: 10px;
    font-size: 14px;
    max-height: 450px;
    overflow-y: auto;
}


.info-title {
    color: #000000;
    font-style: italic;
    margin: 0 0 10px 0;
    text-align: center;
}

.info-image {
    display: block;
    width: 100%;
    border: 2px solid #00a600;
    margin-bottom: 15px;
}

.info-section {
    background: #ffffff;
    color: #000000;
    border: 2px solid #00a600;
    border-radius: 3px;
    padding: 6px;
    margin-bottom: 10px;
    font-size: 12px;
    max-height: 120px;
    overflow-y: auto;
}

.info-section h3 {
    margin: 0 0 5px 0;
    color: #000000;
    font-size: 14px;
}

.info-section ul,
.info-section p {
    margin: 0;
}

.info-right::-webkit-scrollbar,
.info-section::-webkit-scrollbar {
    width: 6px;
}

.info-right::-webkit-scrollbar-thumb,
.info-section::-webkit-scrollbar-thumb {
    background: #00ff00;
}

